Quorum3/Library/Tests/Inheritance/Pass/Dog.quorum
class Dog is Mammal
    action isFurry returns boolean
        return true
    end
end