Quorum3/Library/Tests/Inheritance/Fail/Test2.quorum
class Test2
    private integer y = 5

    private action Run returns boolean
        return true
    end
end